# hpipm

./: CMakeLists.txt
cmake/: Config.cmake.in
interfaces/python/hpipm_python/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  pyproject.toml
interfaces/python/hpipm_python/hpipm_python/: __init__.py
interfaces/python/hpipm_python/hpipm_python/wrapper/: hpipm_dense_qcqp.py  hpipm_dense_qcqp_dim.py  hpipm_dense_qcqp_sol.py  hpipm_dense_qcqp_solver.py  hpipm_dense_qcqp_solver_arg.py  hpipm_dense_qp.py  hpipm_dense_qp_dim.py  hpipm_dense_qp_sol.py  hpipm_dense_qp_solver.py  hpipm_dense_qp_solver_arg.py  hpipm_ocp_qcqp.py  hpipm_ocp_qcqp_dim.py  hpipm_ocp_qcqp_sol.py  hpipm_ocp_qcqp_solver.py  hpipm_ocp_qcqp_solver_arg.py  hpipm_ocp_qp.py  hpipm_ocp_qp_dim.py  hpipm_ocp_qp_sol.py  hpipm_ocp_qp_solver.py  hpipm_ocp_qp_solver2.py  hpipm_ocp_qp_solver_arg.py  hpipm_ocp_qp_solver_arg2.py  load.py
