[project]
name = "hpipm-python"
readme = "README.md"
requires-python = ">=3.9"
license = { "text" = "BSD-2-Clause" }
authors = [{ "name" = "Andrea Zanelli" }, { "name" = "Gianluca Frison" }]
maintainers = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = ["hpipm"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
urls = { "Source" = "http://github.com/giaf/hpipm" }
dependencies = ["numpy<3"]
dynamic = ["version", "description"]

[build-system]
requires = ["py-build-cmake~=0.3.0"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
name = "hpipm_python"

[tool.py-build-cmake.cmake]
minimum_version = "3.15"
build_path = "build"
preset = "conan-default"
config = "Release"
build_presets = "conan-release"
install_components = ["python_binaries"]
find_python = false
find_python3 = false

[tool.py-build-cmake.wheel]
python_tag = "py3"
python_abi = "none"
